--- a/frontend/sermons.html
+++ b/frontend/sermons.html
@@ -854,13 +854,13 @@
     <div class="video-grid">
       <!-- Replace the src with your actual YouTube video URLs -->
       <div class="video-item">
-        <iframe width="100%" height="250" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="250" src="https://www.youtube.com/live/AIALp_GtuMk?si=odDmT1NTRUBDCOVE" frameborder="0" allowfullscreen></iframe>
       </div>
       <div class="video-item">
-        <iframe width="100%" height="250" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="250" src="https://www.youtube.com/live/FleU8fzWFlY?si=m7XLm0GVYnRoUhr7" frameborder="0" allowfullscreen></iframe>
       </div>
       <div class="video-item">
-        <iframe width="100%" height="250" src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="250" src="https://www.youtube.com/live/b8JJxlsN69E?si=tRsVEXBw6DsYSHM7" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </section>
