--- a/frontend/index.html
+++ b/frontend/index.html
@@ -256,10 +256,10 @@
 
     .founders-section {
       background: linear-gradient(135deg, #000000 0%, #dc2626 50%, #000000 100%);
-      padding: 3rem 0;
+      padding: 2rem 0;
       margin-top: 2rem;
-      border-top: 3px solid #dc2626;
-      border-bottom: 3px solid #dc2626;
+      border-top: 1px solid #dc2626;
+      border-bottom: 1px solid #dc2626;
       position: relative;
       overflow: hidden;
     }
@@ -276,22 +276,22 @@
     }
 
     .founder-container {
-      max-width: 800px;
+      max-width: 900px;
       margin: 0 auto;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2.5rem;
-      padding: 0 2rem;
+      gap: 2rem;
+      padding: 0 1.5rem;
     }
 
     .founder, .co-founder {
       text-align: center;
       background: rgba(255,255,255,0.98);
-      padding: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-      border: 2px solid transparent;
+      padding: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+      transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: 1px solid transparent;
       position: relative;
       overflow: hidden;
     }
@@ -318,33 +318,33 @@
     }
 
     .founder-img {
-      width: 120px;
-      height: 120px;
+      width: 90px;
+      height: 90px;
       border-radius: 50%;
       object-fit: cover;
-      margin: 0 auto 1.5rem;
-      border: 4px solid #dc2626;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      margin: 0 auto 1rem;
+      border: 3px solid #dc2626;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       transition: all 0.3s ease;
     }
 
     .founder:hover .founder-img, .co-founder:hover .founder-img {
-      transform: scale(1.1);
+      transform: scale(1.05);
       box-shadow: 0 12px 25px rgba(220,38,38,0.4);
     }
 
     .founder h2, .co-founder h2 {
       color: #dc2626;
-      margin-bottom: 0.5rem;
-      font-size: 1.3rem;
+      margin-bottom: 0.4rem;
+      font-size: 1.1rem;
       font-weight: 600;
     }
 
     .founder h3, .co-founder h3 {
       color: #333333;
       font-weight: 500;
-      font-size: 1.1rem;
-      margin-bottom: 1rem;
+      font-size: 1rem;
+      margin-bottom: 0;
     }
 
     /* ==============================================
