--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,3 +1,215 @@
+<!DOCTYPE html>More actions
+<html lang="en">
+<head>
+  <!-- Basic Metadata -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach.">
+  <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations">
+  <meta name="author" content="Holy Spirit Prayer House">
+  <title>Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet">
+
+<style>
+    /* ==============================================
+       HEADER STYLES
+    ============================================== */
+
+    /* Language Toggle Styles */
+    .language-toggle {
+      text-align: center;
+      padding: 20px 0;
+      background: linear-gradient(135deg, #000000 0%, #333333 100%);
+    }
+
+    .language-toggle button {
+      margin: 0 5px;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+      border: 2px solid #dc2626;
+      background-color: #fff;
+      font-family: 'Roboto', sans-serif;
+      color: #dc2626;
+      border-radius: 25px;
+      transition: all 0.3s ease;
+      box-shadow: 0 2px 10px rgba(220,38,38,0.2);
+    }
+
+    .language-toggle button:hover {
+      background-color: #dc2626;
+      color: white;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 15px rgba(220,38,38,0.4);
+    }
+
+    /* Language Visibility Rules */
+    .telugu .english-text { display: none; }
+    .english .telugu-text { display: none; }
+
+    /* Header Styles */
+    #mainHeader {
+      background: linear-gradient(135deg, #dc2626 0%, #000000 100%);
+      box-shadow: 0 4px 20px rgba(220,38,38,0.3);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .header-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
+    }
+
+    .logo img {
+      height: 50px;
+      width: auto;
+      border-radius: 50%;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+
+    .desktop-nav {
+      display: flex;
+    }
+
+    .nav-links {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      gap: 1rem;
+    }
+
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      padding: 10px 15px;
+      border-radius: 25px;
+      transition: all 0.3s ease;
+      font-weight: 500;
+    }
+
+    .nav-links a:hover {
+      background: rgba(220,38,38,0.3);
+      transform: translateY(-2px);
+    }
+
+    .donate-btn {
+      background: linear-gradient(135deg, #dc2626 0%, #b91c1c 100%) !important;
+      color: white !important;
+      font-weight: bold;
+      box-shadow: 0 4px 15px rgba(220,38,38,0.4);
+    }
+
+    .mobile-menu-button {
+      display: none;
+      background: rgba(220,38,38,0.3);
+      border: 2px solid #dc2626;
+      color: white;
+      font-size: 1.5rem;
+      padding: 10px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .mobile-nav {
+      display: none;
+      background: linear-gradient(135deg, rgba(220,38,38,0.95) 0%, rgba(0,0,0,0.95) 100%);
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      backdrop-filter: blur(10px);
+    }
+
+    .mobile-nav.active {
+      display: block;
+    }
+
+    .mobile-nav .nav-links {
+      flex-direction: column;
+      padding: 1rem;
+    }
+
+
+
+    /* Main Content Area */
+    .main-content {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .content-card {
+      background: #f8f8f8;
+      border-radius: 15px;
+      padding: 60px 50px;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+      margin: 20px 0;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .content-card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 5px;
+      background: linear-gradient(45deg, #8B0000, #DC143C);
+    }
+
+    .section-title {
+      font-size: 3.5rem;
+      font-weight: 700;
+      color: #8B0000;
+      text-align: center;
+      margin-bottom: 30px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .section-content {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      color: #444;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .bible-verse {
+      background: linear-gradient(135deg, #8B0000, #DC143C);
+      color: #fff;
+      padding: 25px 30px;
+      border-radius: 10px;
+      font-style: italic;
+      font-size: 1.1rem;
+      text-align: center;
+      margin: 30px 0;
+      box-shadow: 0 5px 20px rgba(139,0,0,0.3);
+    }
+
+    .mission-title {
+      font-size: 3rem;
+      font-weight: 700;
+      color: #8B0000;
+      text-align: center;
+      margin-bottom: 25px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+
 /* ==============================================
        FOUNDER SECTION STYLES
     ============================================== */
@@ -528,10 +740,6 @@
   <button id="chatbot-toggle" class="chatbot-button" aria-label="Open Chatbot">
     <div class="chatbot-wrapper">
       <img src="images/founder.jpg" alt="Chat with Amma">
-      <span>
-        <span class="english-text">Talk with Amma</span>
-        <span class="telugu-text">అమ్మతో చాట్ చేయండి</span>
-      </span>
     </div>
   </button>
 
